--- a/Ejercicio 4/index.html
+++ b/Ejercicio 4/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<title>Actividad 4: Operaciones aritméticos</title>
-<script src="./js/script.js">
-</script>
+<meta charset="UTF-8">
+<meta name="description" content="Actividad 4 por Sabina Begu">
+<title>Actividad 4: Operaciones aritméticas</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<script src="./js/script.js"></script>
 </head>
-<body>
 
-<h1>Actividad 4: Operaciones aritméticos</h1>
+<h1>Actividad 4: Operaciones aritméticas</h1>
 <p>Al pulsar el botón se le pedirá al usuario dos números "a" y "b" y se mostrará un mesaje con el valor del primer número (a), del segundo (b), de la suma (a+b), de la resta (a-b), de la multiplicación (a*b), de la división (a/b) y del resto (a%b). Cada operación se debe mostrar en una línea distinta.</p>
 <button onclick="Calcular()">Pulsa</button>
 </body>
