--- a/Ejercicio 3/index.html
+++ b/Ejercicio 3/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<title>Page Title</title>
-<script src="./js/script.js">
-</script>
+<meta charset="UTF-8">
+<meta name="description" content="Actividad 3 por Sabina Begu">
+<title>Actividad 3: Tipos de datos. Variables y contantes</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<script src="./js/script.js"></script>
 </head>
 
     <body>
         <h1>Actividad 3: Tipos de datos. Variables y contantes</h1>
         <p>Al pulsar el botón se le pedirá al usuario que escriba su nombre y su edad. Los datos introducidos se almacenarán en dos variables llamadas <b>nombre</b> y <b>edad</b> y se mostrará al usuario un mensaje del estilo <i>"Hola" + nombre + ", veo que tienes " + edad + " años."</i>.</p>
-        <button onclick="hola()"> Pedir datos </button>
+        <button onclick="pedirDatos()"> Pedir datos </button>
     </body> 
 
 </html>
